chore(commitlint): generate required scopes

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,7 +1,7 @@
 {
   "generator-semantic-module": {
     "packager": "yarn",
-    "commitizen-adapter": "@commitlint/prompt",
+    "commitizen-adapter": "cz-customizable",
     "commitlint-config": "@commitlint/config-conventional"
   }
 }
